Timetable and mini Classroom completed