@@ -22,7 +22,10 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
+        return java.util.List.of(
+            new SimpleGrantedAuthority("ROLE_" + user.getRole().name()),
+            new SimpleGrantedAuthority(user.getRole().name())
+        );
     }
 
     @Override
